# net_promoter_score

./: Cargo.toml  changelog.md  readme.md
src/: lib.rs  prelude.rs
tests/: integration_test.rs
